[package]
name = "s3id"
version = "0.1.0"
authors = ["Sebastian Ramacher"]
license = "Apache-2.0 OR MIT"
edition = "2024"

[dependencies]
rand = "0.9"
rayon = "1"
sha2 = { version = "0.10", default-features = false, features = ["std"] }
sha3 = { version = "0.10", default-features = false, features = ["std", "asm"] }
thiserror = "2"
groth-sahai = { git = "https://github.com/jdwhite48/groth-sahai-rs", rev = "cc0c3f023efb68c07e5a9d2da9fc9ca588f05698" }
ark-bls12-381 = { version = "0.5" }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
rand_chacha = { version = "0.3" }

[dev-dependencies]
criterion = "0.7"
num = "0.4"
subtle = "2"

[[bench]]
name = "atact"
harness = false

[[bench]]
name = "s3id"
harness = false

[profile.bench]
lto = true
opt-level = 3
